static/css/gallery.css
/* #gallery {
    overflow: hidden;
}

.img-gal {
    width: 800px;
    height: 300px;
    object-fit: cover;
}

@media only screen and (max-width: 800px) {
    .img-gal {
        width: 90%;
        height: 200px;
        object-fit: cover;
        margin: 0 60px;
    }
} */

/* 2222 */
#gallerybox{
    background: #000;
  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
  font-size: 14px;
  
  margin: 0%;
  padding: 0%;
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 80vh;
}
.galleryalign
{
    padding-top: 0%;
    padding-bottom: 0%;
}
.galleryalign2
{
    padding-bottom: 0%;
    margin-bottom: 0%;
}


.swiper-container {
    width: 100%;
    /* padding-top: 0px;
    padding-bottom: 0px; */
  }
  .swiper-slide {
    background-position: center;
    background-size: cover;
    width: 400px;
    height: 300px;
    background: #000;
  }

